--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>gemtreefarms</title>
+</head>
+<body>
+
+  <h1>GEMTREEFARMS</h1>
+
+  <h2>CURRENT TREES</h2>
+
+
+</body>
+</html>
